Avoid two line numbers on one row on narrow screens

--- a/versed.scss
+++ b/versed.scss
@@ -45,6 +45,7 @@ blockquote.versed {
 .versed.versed-number-lines {
     counter-reset: line;
     [class*='versed-line-'] {
+        clear: right; // avoids two line numbers on one line
         &:after {
             counter-increment: line;
             content: counter(line);
